add async and defer to tags, tweak mobile scale

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <ul id="jump-menu-desktop" class="md:mt-0 md:block hidden"></ul>
       </nav>
     </div>
+    <script
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.9.359/pdf.min.js"
+    ></script>
+    <script defer src="main.js"></script>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.9.359/pdf.min.js"></script>
-  <script src="main.js"></script>
 </html>
